<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ca.cmpt276A3.view.GameActivity"
    tools:showIn="@layout/activity_game">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="13dp"
        android:text="@string/fixed_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/fixed_out_of"
        app:layout_constraintStart_toEndOf="@+id/txtFoundMines"
        app:layout_constraintTop_toTopOf="@+id/txtFoundMines" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/FIXED_mines"
        app:layout_constraintStart_toEndOf="@+id/txtMaxMines"
        app:layout_constraintTop_toTopOf="@+id/txtMaxMines" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/fixed_scans_used"
        app:layout_constraintEnd_toStartOf="@+id/txtScans"
        app:layout_constraintTop_toTopOf="@+id/txt3" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fixed_times_played"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtTimesPlayed" />

    <TextView
        android:id="@+id/txtFoundMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/changeable_found"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt1"
        app:layout_constraintTop_toTopOf="@+id/txt1" />

    <TextView
        android:id="@+id/txtMaxMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/changeable_total"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt2"
        app:layout_constraintTop_toTopOf="@+id/txt2" />

    <TextView
        android:id="@+id/txtScans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/changeable_scans"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt4" />

    <TextView
        android:id="@+id/txtTimesPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/changeable_totalTimes"
        app:layout_constraintBottom_toBottomOf="@+id/txt5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/tableMines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/txt5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2">


    </TableLayout>

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:text="@string/btn_goToMain"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableMines" />

</androidx.constraintlayout.widget.ConstraintLayout>