<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ca.cmpt276A3.view.HelpScreen"
    tools:showIn="@layout/activity_help">

    <TextView
        android:id="@+id/txtGameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/help_cite_game_logo"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCitations"
        app:layout_constraintStart_toEndOf="@+id/txtCitations"
        app:layout_constraintTop_toTopOf="@+id/txtCitations"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtWelcomeCartoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/help_cite_welcome_screen_cartoon"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtMineIcon"
        app:layout_constraintStart_toEndOf="@+id/txtMineIcon"
        app:layout_constraintTop_toTopOf="@+id/txtMineIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtMineIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/help_cite_mine_icon"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtBackground"
        app:layout_constraintStart_toEndOf="@+id/txtBackground"
        app:layout_constraintTop_toTopOf="@+id/txtBackground"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/help_cite_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtGameLogo"
        app:layout_constraintStart_toEndOf="@+id/txtGameLogo"
        app:layout_constraintTop_toTopOf="@+id/txtGameLogo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCitations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/help_fixed_citations"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAboutAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/help_about_the_author"
        app:layout_constraintBottom_toTopOf="@+id/txtDirections"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/help_content"
        app:layout_constraintBottom_toTopOf="@+id/txtAboutAuthor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDirections"
        android:layout_width="709dp"
        android:layout_height="192dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/help_directions"
        app:layout_constraintBottom_toTopOf="@+id/txtGameLogo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSound_citation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/help_sounds"
        app:layout_constraintBottom_toBottomOf="@+id/txtWelcomeCartoon"
        app:layout_constraintStart_toEndOf="@+id/txtWelcomeCartoon"
        app:layout_constraintTop_toTopOf="@+id/txtWelcomeCartoon" />

    <TextView
        android:id="@+id/txtDialogImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/help_dialog_images"
        app:layout_constraintBottom_toBottomOf="@+id/txtSound_citation"
        app:layout_constraintStart_toEndOf="@+id/txtSound_citation"
        app:layout_constraintTop_toTopOf="@+id/txtSound_citation" />
</androidx.constraintlayout.widget.ConstraintLayout>